springboot-devtools setting

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -62,6 +62,11 @@
          <!--   <version>4.3.1</version>-->
         </dependency>
         <!-- Querydsl-->
+        <!--Springboot Devtool-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
