--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#Live Reload 기능 활성화
+spring.devtools.livereload.enabled=true
+
+#Thymeleaf cache off
+spring.thymeleaf.cache=false
+
