--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <scope>test</scope>
             <version>${spring-security.version}</version>
         </dependency>
+        <!--thymeleaf-extras-springsecurity5-->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
