--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,15 @@ spring.devtools.livereload.enabled=true
 
 #Thymeleaf cache off
 spring.thymeleaf.cache=false
+
+#파일 한 개당 최대 사이즈
+spring.servlet.multipart.max-file-size=20MB
+
+#요청당 최대 파일크기
+spring.servlet.multipart.max-request-size=100MB
+
+#상품 이미지 업로드 경로
+itemImgLocation=C:/Shop/item
+
+#리소스 업로드 경로
+uploadPath=file:///C:/shop/
