--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,14 @@ spring.datasource.password=1234
 
 #쿼리 콘솔 출력
 spring.jpa.properties.hibernate.show_sql=true
+
+#콘솔창에 출력되는 쿼리 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
 
+#쿼리에 물음표로 출력되는 바인드 파라미터 출력
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Live Reload 기능 활성화
@@ -25,11 +28,10 @@ spring.thymeleaf.cache=false
 #파일 한 개당 최대 사이즈
 spring.servlet.multipart.max-file-size=20MB
 
-#요청당 최대 파일크기
+#요청 당 최대 파일크기
 spring.servlet.multipart.max-request-size=100MB
 
 #상품 이미지 업로드 경로
-itemImgLocation=C:/Shop/item
-
+itemImgLocation=D:/shop/item
 #리소스 업로드 경로
-uploadPath=file:///C:/shop/
+uploadPath=file:///D:/shop/
