--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ spring.servlet.multipart.max-request-size=100MB
 itemImgLocation=D:/shop/item
 # 리소스 업로드 경로
 uploadPath=file:///D:/shop/
+
+#기본 batch size 설정
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
